2007-12-26  Badlop  <badlop@process-one.net>

	* src/web/ejabberd_web_admin.erl: Translate menu items of webadmin
	hooks in each module (EJAB-485)
	* src/mod_shared_roster.erl: Likewise

	* src/web/ejabberd_web_admin.erl: max_user_sessions access rule
	contains an integer, but webadmin always expects atoms (EJAB-482)

2007-12-25  Badlop  <badlop@process-one.net>

	* src/mod_configure.erl: Bugfix, update to match changes in
	mod_announce SVN r1099

2007-12-24  Christophe Romain <christophe.romain@process-one.net>

	* src/mod_pubsub/mod_pubsub.erl: remove useless get_roster_info call in
	presence_probe handling when access rule is presence

2007-12-24  Mickael Remond  <mremond@process-one.net>

	* doc/release_notes_2.0.0.txt: ejabberd 2.0.0 beta 1 release
	notes.

2007-12-23  Badlop  <badlop@process-one.net>

	* src/msgs/vi.msg: New Vietnamese translation (thanks to EQHO
	Communications)

	* src/msgs/th.msg: New Thai translation (thanks to EQHO
	Communications)

	* src/msgs/gl.msg: Updated (thanks to Carlos E. Lopez)

	* src/mod_muc/mod_muc_room.erl: Log room creation and
	destruction. Ensure JID of owners of MUC room are user, not
	server (EJAB-435)

2007-12-22  Badlop  <badlop@process-one.net>

	* src/ejabberd.app: Update ejabberd.app: add new erlang
	modules (EJAB-466)

	* doc/introduction.tex: Small updates

	* doc/guide.tex: Small fixes in Install. Added http_bind to
	Listening Ports.

	* src/web/ejabberd_http.erl: Add 'http_bind' option for easy
	configuration of HTTP-Binding

	* src/mod_announce.erl: Fixed unnoticeable bug related to Node
	matching. Renamed some nonstandard node names according to
	XEP-0133. Small reordering of clauses. When editing MOTD, display
	current value (EJAB-475)

2007-12-22  Christophe Romain <christophe.romain@process-one.net>

	* src/ejabberd_sm.erl: change incoming_presence_hook to
	presence_probe_hook
	* src/ejabberd_c2s.erl: Likewise

	* src/mod_pubsub/mod_pubsub.erl: send last pep item bugfix and